update .net ws federation

--- a/AspNetWebForms/Web.config
+++ b/AspNetWebForms/Web.config
@@ -5,10 +5,10 @@
   -->
 <configuration>
   <appSettings>
-    <add key="IdProo:ClientId" value="cfa80464-a8be-4805-b2d2-c7453597423f"/>
-    <add key="IdProo:ClientSecret" value="d7a0e477-a830-4acd-a164-3d3510fc7b36"/>
-    <add key="IdProo:Authority" value="https://login.wk.local/"/>
-    <add key="IdProo:RedirectUri" value="http://localhost:8080/authorization-code/callback"/>
+    <add key="IdAMan:ClientId" value="xxxxxx-xxxx-xxxx-xxxx-xxxxxx"/>
+    <add key="IdAMan:ClientSecret" value="xxxxxx-xxxx-xxxx-xxxx-xxxxxx"/>
+    <add key="IdAMan:Authority" value="https://login.com/"/>
+    <add key="IdAMan:RedirectUri" value="https://localhost:44302/authorization-code/callback"/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
